<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/signup_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:civ_border="false"
                android:layout_margin="12dp"
                android:background="@drawable/ic_user_pic" />


            <EditText
                android:id="@+id/signup_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="Name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f0f0f0" />
            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="12dp"-->
            <!--android:paddingTop="12dp"-->
            <!--android:paddingBottom="12dp"-->
            <!--android:text="Choose your Gender"-->
            <!--android:textSize="16sp" />-->

            <!--<Spinner-->
            <!--android:id="@+id/signup_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="12dp"-->
            <!--android:layout_marginEnd="12dp"-->
            <!--android:layout_weight="1" />-->
            <!--</LinearLayout>-->

            <EditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f0f0f0" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="Username"
            android:maxLines="1"
            android:padding="18dp"
            android:textColor="@android:color/black" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" />


        <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:focusableInTouchMode="true"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@android:color/black" />

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#f0f0f0" />-->

            <Button
                android:id="@+id/signup_register_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/blue_gradient"
                android:minHeight="56dp"
                android:text="Register with email"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"/>

            <Button
                android:id="@+id/reset_password_reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/signup_log_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="By creating an account you agree to our Terms of Service and Privacy Policy"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:padding="120dp"
        android:visibility="gone" />


</LinearLayout>